--- a/css/site.css
+++ b/css/site.css
@@ -12,11 +12,25 @@
 }
 
 .uiButtons {
-    
+.LoginTextArea {
+    width: 20px;
+    height: 26px;
+    background-color: #FFF;
+    margin: 0px;
+    padding: 0px;
+    border: 1px solid black;
+}
+.UIColorButton {
+    height: 28px;
+    width: 40px;
+    margin: 0px;
+    padding: 0px;
+    border: 1px solid black;
 }
 
-.UIBbutton {
+.UIButton {
     width: 80px;
+    height: 28px;
     background-color: #FFF;
     margin: 0px;
     padding: 0px;
